<resources>
    <string name="app_name">The Road Less Travelled</string>
    <string name="notification_channel_name">background service channel</string>
    <string name="notification_channel_id">bg_chan</string>
    <string name="notification_channel_desc">location display notification channel</string>

    <string name="start_location_tracking">Start Tracking</string>
    <string name="stop_location_tracking">Stop Tracking</string>
    <string name="clear_tracked_data">Clear Tracked Data</string>
    <string name="route_me">Route Me</string>
    <string name="clear_routes">Clear Routes</string>
    <string name="route_again">Route Me Differently</string>
    <string name="route_from">from</string>
    <string name="route_to">to</string>

    <string name="hint_location">Location…</string>
    <string name="hint_latitude">Latitude…</string>
    <string name="hint_longitude">Longitude…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Location not saved because it is empty.</string>

    <string name="user_name">User Name</string>
    <string name="email">E-Mail</string>
    <string name="create_date">Member Since</string>
    <string name="portal_name">Portal</string>
    <string name="portal_url">http://ps-dbs.maps.arcgis.com</string>
    <string name="date_format">dd-MMM-yyyy</string>
    <string name="get_thumbnail_error">Error getting user thumbnail:</string>
    <string name="authenticate_error">User did not authenticate against </string>

    <string name="address_search_hint">Enter address to navigate to</string>
    <string name="geo_locate_error">Geocode failed on address.</string>
    <string name="location_not_found">No location with that name: </string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="locate_me_button">locate me button</string>
    <string name="no_location">No Location</string>
    <string name="navigation_button_desc">change navigation between locked up and free</string>
</resources>
