<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MapActivity">

    <com.esri.arcgisruntime.mapping.view.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp">

            <include layout="@layout/loading_spinner"/>

            <android.support.v7.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorWhiteSemiTransparent"
                android:queryHint="@string/address_search_hint" />

            <ImageButton
                android:id="@+id/locateButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@id/searchView"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:onClick="locateMe"
                android:src="@drawable/locate_icon"
                android:scaleType="fitCenter"
                android:background="#00000000"
                android:contentDescription="@string/locate_me_button" />

            <ImageButton
                android:id="@+id/navigateButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@id/locateButton"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:onClick="changeNavigation"
                android:src="@drawable/navigate_icon"
                android:scaleType="fitCenter"
                android:background="#00000000"
                android:contentDescription="@string/navigation_button_desc" />

            <TextView
                android:id="@+id/directionsText"
                android:layout_toStartOf="@id/locateButton"
                android:layout_height="wrap_content"
                android:layout_below="@id/searchView"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="0dp"
                android:background="#7d00c800"
                android:visibility="gone"
                android:text=""
                android:padding="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/approachingDirectionsText"
                android:layout_toStartOf="@id/locateButton"
                android:layout_height="wrap_content"
                android:layout_below="@id/directionsText"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="0dp"
                android:background="#7dfafa00"
                android:visibility="gone"
                android:text=""
                android:padding="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textSize="22sp" />

            <Button
                android:id="@+id/clearRoutesButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:onClick="clearRoutes"
                android:text="@string/clear_routes"
                android:layout_above="@id/routeMeButton"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"/>

            <Button
                android:id="@+id/routeMeButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:onClick="routeMe"
                android:text="@string/route_me"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"/>

            <Button
                android:id="@+id/clearTrackedButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:onClick="clearTracked"
                android:text="@string/clear_tracked_data"
                android:layout_above="@id/serviceButton"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"/>

            <Button
                android:id="@+id/serviceButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:onClick="startTracking"
                android:text="@string/start_location_tracking"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"/>
        </RelativeLayout>
    </com.esri.arcgisruntime.mapping.view.MapView>

</LinearLayout>